[package]
name = "permer"
version = "0.1.0"
edition = "2021"
author = "ByteSudoer"
readme = "./README.md"
repository = "https://github.com/ByteSudoer/Permer"
description = "Permer is a CLI tool written in Rust that provides information about files present in your file system."
categories = ["command-line-utilities", "filesystem"]


[[bin]]
name = "permer"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.3.5"
users = "0.11.0"
chrono = "0.4.26"
cli-table = "0.4.7"
